// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AlertMessage error matches snapshot 1`] = `
.c0 {
  visibility: hidden;
  display: none;
  width: var(--px-alert-message-width,auto);
  margin: 0.33333rem;
  padding: 0.66667rem;
  min-height: 4rem;
  word-wrap: break-word;
  word-break: break-word;
  background-color: var(--px-alert-message-background-color,white);
  position: relative;
  min-height: 0px;
  opacity: 0;
  max-height: 0px;
  padding-top: 0px;
  padding-bottom: 0px;
  box-shadow: 0px 4px 8px var(--px-shadow-notification,rgba(0,0,0,0.2));
  -webkit-animation: LkNfV 0.4s cubic-bezier(0.78,0.13,0.16,0.87);
  animation: LkNfV 0.4s cubic-bezier(0.78,0.13,0.16,0.87);
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  overflow: hidden;
  height: 4rem;
  visibility: visible;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  opacity: 1;
  max-height: none;
  padding-top: 0.66667rem;
  padding-bottom: 0.66667rem;
  -webkit-animation: ayxbO 0.4s cubic-bezier(0.78,0.13,0.16,0.87);
  animation: ayxbO 0.4s cubic-bezier(0.78,0.13,0.16,0.87);
}

.c0 button {
  color: var(--px-alert-message-dismiss-icon-color,gray);
  outline: none;
  max-width: 50px;
}

.c0 button svg {
  height: 1.33333rem;
  width: 1.33333rem;
  fill: var(--px-alert-message-dismiss-icon-color,gray);
  stroke: var(--px-alert-message-dismiss-icon-color,gray);
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 2;
  -ms-flex: 2;
  flex: 2;
  margin-left: 0.66667rem;
  margin-right: 0.66667rem;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.c4 .dismiss {
  width: 44px;
  height: 44px;
  min-width: auto;
}

.c1 {
  min-height: 4rem;
  width: 4rem;
  margin-left: -0.6666rem;
  margin-top: -0.6666rem;
  margin-bottom: -0.6666rem;
  padding-top: 1rem;
  background-color: var(--px-alert-message-color--error,yellow);
}

.c3 {
  color: var(--px-alert-message-text-color,black);
  line-height: 1.06667rem;
  font-size: 0.8rem;
  padding: 0;
  margin: 0;
}

<div
  className="c0"
>
  <div
    className="c1"
    type="error"
  />
  <div
    className="c2"
  >
    <div
      className="c3"
    >
      <strong>
        null
      </strong>
      <span />
      <div>
        This is a message
      </div>
    </div>
  </div>
  <div
    className="c4"
  />
</div>
`;

exports[`AlertMessage healthy matches snapshot 1`] = `
.c0 {
  visibility: hidden;
  display: none;
  width: var(--px-alert-message-width,auto);
  margin: 0.33333rem;
  padding: 0.66667rem;
  min-height: 4rem;
  word-wrap: break-word;
  word-break: break-word;
  background-color: var(--px-alert-message-background-color,white);
  position: relative;
  min-height: 0px;
  opacity: 0;
  max-height: 0px;
  padding-top: 0px;
  padding-bottom: 0px;
  box-shadow: 0px 4px 8px var(--px-shadow-notification,rgba(0,0,0,0.2));
  -webkit-animation: LkNfV 0.4s cubic-bezier(0.78,0.13,0.16,0.87);
  animation: LkNfV 0.4s cubic-bezier(0.78,0.13,0.16,0.87);
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  overflow: hidden;
  height: 4rem;
  visibility: visible;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  opacity: 1;
  max-height: none;
  padding-top: 0.66667rem;
  padding-bottom: 0.66667rem;
  -webkit-animation: ayxbO 0.4s cubic-bezier(0.78,0.13,0.16,0.87);
  animation: ayxbO 0.4s cubic-bezier(0.78,0.13,0.16,0.87);
}

.c0 button {
  color: var(--px-alert-message-dismiss-icon-color,gray);
  outline: none;
  max-width: 50px;
}

.c0 button svg {
  height: 1.33333rem;
  width: 1.33333rem;
  fill: var(--px-alert-message-dismiss-icon-color,gray);
  stroke: var(--px-alert-message-dismiss-icon-color,gray);
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 2;
  -ms-flex: 2;
  flex: 2;
  margin-left: 0.66667rem;
  margin-right: 0.66667rem;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.c4 .dismiss {
  width: 44px;
  height: 44px;
  min-width: auto;
}

.c1 {
  min-height: 4rem;
  width: 4rem;
  margin-left: -0.6666rem;
  margin-top: -0.6666rem;
  margin-bottom: -0.6666rem;
  padding-top: 1rem;
  background-color: var(--px-alert-label-background-color--healthy,green);
}

.c3 {
  color: var(--px-alert-message-text-color,black);
  line-height: 1.06667rem;
  font-size: 0.8rem;
  padding: 0;
  margin: 0;
}

<div
  className="c0"
>
  <div
    className="c1"
    type="healthy"
  />
  <div
    className="c2"
  >
    <div
      className="c3"
    >
      <strong>
        null
      </strong>
      <span />
      <div>
        This is a message
      </div>
    </div>
  </div>
  <div
    className="c4"
  />
</div>
`;

exports[`AlertMessage hidden - matches snapshot 1`] = `
.c0 {
  visibility: hidden;
  display: none;
  width: var(--px-alert-message-width,auto);
  margin: 0.33333rem;
  padding: 0.66667rem;
  min-height: 4rem;
  word-wrap: break-word;
  word-break: break-word;
  background-color: var(--px-alert-message-background-color,white);
  position: relative;
  min-height: 0px;
  opacity: 0;
  max-height: 0px;
  padding-top: 0px;
  padding-bottom: 0px;
  box-shadow: 0px 4px 8px var(--px-shadow-notification,rgba(0,0,0,0.2));
  -webkit-animation: LkNfV 0.4s cubic-bezier(0.78,0.13,0.16,0.87);
  animation: LkNfV 0.4s cubic-bezier(0.78,0.13,0.16,0.87);
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 button {
  color: var(--px-alert-message-dismiss-icon-color,gray);
  outline: none;
  max-width: 50px;
}

.c0 button svg {
  height: 1.33333rem;
  width: 1.33333rem;
  fill: var(--px-alert-message-dismiss-icon-color,gray);
  stroke: var(--px-alert-message-dismiss-icon-color,gray);
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 2;
  -ms-flex: 2;
  flex: 2;
  margin-left: 0.66667rem;
  margin-right: 0.66667rem;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.c4 .dismiss {
  width: 44px;
  height: 44px;
  min-width: auto;
}

.c1 {
  min-height: 4rem;
  width: 4rem;
  margin-left: -0.6666rem;
  margin-top: -0.6666rem;
  margin-bottom: -0.6666rem;
  padding-top: 1rem;
  background-color: var(--px-alert-message-color--important,red);
}

.c3 {
  color: var(--px-alert-message-text-color,black);
  line-height: 1.06667rem;
  font-size: 0.8rem;
  padding: 0;
  margin: 0;
}

<div
  className="c0"
>
  <div
    className="c1"
    type="important"
  />
  <div
    className="c2"
  >
    <div
      className="c3"
    >
      <strong>
        null
      </strong>
      <span />
      <div />
    </div>
  </div>
  <div
    className="c4"
  />
</div>
`;

exports[`AlertMessage important matches snapshot 1`] = `
.c0 {
  visibility: hidden;
  display: none;
  width: var(--px-alert-message-width,auto);
  margin: 0.33333rem;
  padding: 0.66667rem;
  min-height: 4rem;
  word-wrap: break-word;
  word-break: break-word;
  background-color: var(--px-alert-message-background-color,white);
  position: relative;
  min-height: 0px;
  opacity: 0;
  max-height: 0px;
  padding-top: 0px;
  padding-bottom: 0px;
  box-shadow: 0px 4px 8px var(--px-shadow-notification,rgba(0,0,0,0.2));
  -webkit-animation: LkNfV 0.4s cubic-bezier(0.78,0.13,0.16,0.87);
  animation: LkNfV 0.4s cubic-bezier(0.78,0.13,0.16,0.87);
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  overflow: hidden;
  height: 4rem;
  visibility: visible;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  opacity: 1;
  max-height: none;
  padding-top: 0.66667rem;
  padding-bottom: 0.66667rem;
  -webkit-animation: ayxbO 0.4s cubic-bezier(0.78,0.13,0.16,0.87);
  animation: ayxbO 0.4s cubic-bezier(0.78,0.13,0.16,0.87);
}

.c0 button {
  color: var(--px-alert-message-dismiss-icon-color,gray);
  outline: none;
  max-width: 50px;
}

.c0 button svg {
  height: 1.33333rem;
  width: 1.33333rem;
  fill: var(--px-alert-message-dismiss-icon-color,gray);
  stroke: var(--px-alert-message-dismiss-icon-color,gray);
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 2;
  -ms-flex: 2;
  flex: 2;
  margin-left: 0.66667rem;
  margin-right: 0.66667rem;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.c4 .dismiss {
  width: 44px;
  height: 44px;
  min-width: auto;
}

.c1 {
  min-height: 4rem;
  width: 4rem;
  margin-left: -0.6666rem;
  margin-top: -0.6666rem;
  margin-bottom: -0.6666rem;
  padding-top: 1rem;
  background-color: var(--px-alert-message-color--important,red);
}

.c3 {
  color: var(--px-alert-message-text-color,black);
  line-height: 1.06667rem;
  font-size: 0.8rem;
  padding: 0;
  margin: 0;
}

<div
  className="c0"
>
  <div
    className="c1"
    type="important"
  />
  <div
    className="c2"
  >
    <div
      className="c3"
    >
      <strong>
        null
      </strong>
      <span />
      <div>
        This is a message
      </div>
    </div>
  </div>
  <div
    className="c4"
  />
</div>
`;

exports[`AlertMessage information matches snapshot 1`] = `
.c0 {
  visibility: hidden;
  display: none;
  width: var(--px-alert-message-width,auto);
  margin: 0.33333rem;
  padding: 0.66667rem;
  min-height: 4rem;
  word-wrap: break-word;
  word-break: break-word;
  background-color: var(--px-alert-message-background-color,white);
  position: relative;
  min-height: 0px;
  opacity: 0;
  max-height: 0px;
  padding-top: 0px;
  padding-bottom: 0px;
  box-shadow: 0px 4px 8px var(--px-shadow-notification,rgba(0,0,0,0.2));
  -webkit-animation: LkNfV 0.4s cubic-bezier(0.78,0.13,0.16,0.87);
  animation: LkNfV 0.4s cubic-bezier(0.78,0.13,0.16,0.87);
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  overflow: hidden;
  height: 4rem;
  visibility: visible;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  opacity: 1;
  max-height: none;
  padding-top: 0.66667rem;
  padding-bottom: 0.66667rem;
  -webkit-animation: ayxbO 0.4s cubic-bezier(0.78,0.13,0.16,0.87);
  animation: ayxbO 0.4s cubic-bezier(0.78,0.13,0.16,0.87);
}

.c0 button {
  color: var(--px-alert-message-dismiss-icon-color,gray);
  outline: none;
  max-width: 50px;
}

.c0 button svg {
  height: 1.33333rem;
  width: 1.33333rem;
  fill: var(--px-alert-message-dismiss-icon-color,gray);
  stroke: var(--px-alert-message-dismiss-icon-color,gray);
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 2;
  -ms-flex: 2;
  flex: 2;
  margin-left: 0.66667rem;
  margin-right: 0.66667rem;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.c4 .dismiss {
  width: 44px;
  height: 44px;
  min-width: auto;
}

.c1 {
  min-height: 4rem;
  width: 4rem;
  margin-left: -0.6666rem;
  margin-top: -0.6666rem;
  margin-bottom: -0.6666rem;
  padding-top: 1rem;
  background-color: var(--px-alert-message-color--information,blue);
}

.c3 {
  color: var(--px-alert-message-text-color,black);
  line-height: 1.06667rem;
  font-size: 0.8rem;
  padding: 0;
  margin: 0;
}

<div
  className="c0"
>
  <div
    className="c1"
    type="information"
  />
  <div
    className="c2"
  >
    <div
      className="c3"
    >
      <strong>
        null
      </strong>
      <span />
      <div>
        This is a message
      </div>
    </div>
  </div>
  <div
    className="c4"
  />
</div>
`;

exports[`AlertMessage matches snapshot 1`] = `
.c0 {
  visibility: hidden;
  display: none;
  width: var(--px-alert-message-width,auto);
  margin: 0.33333rem;
  padding: 0.66667rem;
  min-height: 4rem;
  word-wrap: break-word;
  word-break: break-word;
  background-color: var(--px-alert-message-background-color,white);
  position: relative;
  min-height: 0px;
  opacity: 0;
  max-height: 0px;
  padding-top: 0px;
  padding-bottom: 0px;
  box-shadow: 0px 4px 8px var(--px-shadow-notification,rgba(0,0,0,0.2));
  -webkit-animation: LkNfV 0.4s cubic-bezier(0.78,0.13,0.16,0.87);
  animation: LkNfV 0.4s cubic-bezier(0.78,0.13,0.16,0.87);
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  overflow: hidden;
  height: 4rem;
  visibility: visible;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  opacity: 1;
  max-height: none;
  padding-top: 0.66667rem;
  padding-bottom: 0.66667rem;
  -webkit-animation: ayxbO 0.4s cubic-bezier(0.78,0.13,0.16,0.87);
  animation: ayxbO 0.4s cubic-bezier(0.78,0.13,0.16,0.87);
}

.c0 button {
  color: var(--px-alert-message-dismiss-icon-color,gray);
  outline: none;
  max-width: 50px;
}

.c0 button svg {
  height: 1.33333rem;
  width: 1.33333rem;
  fill: var(--px-alert-message-dismiss-icon-color,gray);
  stroke: var(--px-alert-message-dismiss-icon-color,gray);
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 2;
  -ms-flex: 2;
  flex: 2;
  margin-left: 0.66667rem;
  margin-right: 0.66667rem;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.c4 .dismiss {
  width: 44px;
  height: 44px;
  min-width: auto;
}

.c1 {
  min-height: 4rem;
  width: 4rem;
  margin-left: -0.6666rem;
  margin-top: -0.6666rem;
  margin-bottom: -0.6666rem;
  padding-top: 1rem;
  background-color: var(--px-alert-message-color--important,red);
}

.c3 {
  color: var(--px-alert-message-text-color,black);
  line-height: 1.06667rem;
  font-size: 0.8rem;
  padding: 0;
  margin: 0;
}

<div
  className="c0"
>
  <div
    className="c1"
    type="important"
  />
  <div
    className="c2"
  >
    <div
      className="c3"
    >
      <strong>
        null
      </strong>
      <span />
      <div />
    </div>
  </div>
  <div
    className="c4"
  />
</div>
`;

exports[`AlertMessage success matches snapshot 1`] = `
.c0 {
  visibility: hidden;
  display: none;
  width: var(--px-alert-message-width,auto);
  margin: 0.33333rem;
  padding: 0.66667rem;
  min-height: 4rem;
  word-wrap: break-word;
  word-break: break-word;
  background-color: var(--px-alert-message-background-color,white);
  position: relative;
  min-height: 0px;
  opacity: 0;
  max-height: 0px;
  padding-top: 0px;
  padding-bottom: 0px;
  box-shadow: 0px 4px 8px var(--px-shadow-notification,rgba(0,0,0,0.2));
  -webkit-animation: LkNfV 0.4s cubic-bezier(0.78,0.13,0.16,0.87);
  animation: LkNfV 0.4s cubic-bezier(0.78,0.13,0.16,0.87);
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  overflow: hidden;
  height: 4rem;
  visibility: visible;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  opacity: 1;
  max-height: none;
  padding-top: 0.66667rem;
  padding-bottom: 0.66667rem;
  -webkit-animation: ayxbO 0.4s cubic-bezier(0.78,0.13,0.16,0.87);
  animation: ayxbO 0.4s cubic-bezier(0.78,0.13,0.16,0.87);
}

.c0 button {
  color: var(--px-alert-message-dismiss-icon-color,gray);
  outline: none;
  max-width: 50px;
}

.c0 button svg {
  height: 1.33333rem;
  width: 1.33333rem;
  fill: var(--px-alert-message-dismiss-icon-color,gray);
  stroke: var(--px-alert-message-dismiss-icon-color,gray);
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 2;
  -ms-flex: 2;
  flex: 2;
  margin-left: 0.66667rem;
  margin-right: 0.66667rem;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.c4 .dismiss {
  width: 44px;
  height: 44px;
  min-width: auto;
}

.c1 {
  min-height: 4rem;
  width: 4rem;
  margin-left: -0.6666rem;
  margin-top: -0.6666rem;
  margin-bottom: -0.6666rem;
  padding-top: 1rem;
  background-color: var(--px-alert-label-background-color--healthy,green);
}

.c3 {
  color: var(--px-alert-message-text-color,black);
  line-height: 1.06667rem;
  font-size: 0.8rem;
  padding: 0;
  margin: 0;
}

<div
  className="c0"
>
  <div
    className="c1"
    type="success"
  />
  <div
    className="c2"
  >
    <div
      className="c3"
    >
      <strong>
        null
      </strong>
      <span />
      <div>
        This is a message
      </div>
    </div>
  </div>
  <div
    className="c4"
  />
</div>
`;

exports[`AlertMessage warning matches snapshot 1`] = `
.c0 {
  visibility: hidden;
  display: none;
  width: var(--px-alert-message-width,auto);
  margin: 0.33333rem;
  padding: 0.66667rem;
  min-height: 4rem;
  word-wrap: break-word;
  word-break: break-word;
  background-color: var(--px-alert-message-background-color,white);
  position: relative;
  min-height: 0px;
  opacity: 0;
  max-height: 0px;
  padding-top: 0px;
  padding-bottom: 0px;
  box-shadow: 0px 4px 8px var(--px-shadow-notification,rgba(0,0,0,0.2));
  -webkit-animation: LkNfV 0.4s cubic-bezier(0.78,0.13,0.16,0.87);
  animation: LkNfV 0.4s cubic-bezier(0.78,0.13,0.16,0.87);
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  overflow: hidden;
  height: 4rem;
  visibility: visible;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  opacity: 1;
  max-height: none;
  padding-top: 0.66667rem;
  padding-bottom: 0.66667rem;
  -webkit-animation: ayxbO 0.4s cubic-bezier(0.78,0.13,0.16,0.87);
  animation: ayxbO 0.4s cubic-bezier(0.78,0.13,0.16,0.87);
}

.c0 button {
  color: var(--px-alert-message-dismiss-icon-color,gray);
  outline: none;
  max-width: 50px;
}

.c0 button svg {
  height: 1.33333rem;
  width: 1.33333rem;
  fill: var(--px-alert-message-dismiss-icon-color,gray);
  stroke: var(--px-alert-message-dismiss-icon-color,gray);
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 2;
  -ms-flex: 2;
  flex: 2;
  margin-left: 0.66667rem;
  margin-right: 0.66667rem;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.c4 .dismiss {
  width: 44px;
  height: 44px;
  min-width: auto;
}

.c1 {
  min-height: 4rem;
  width: 4rem;
  margin-left: -0.6666rem;
  margin-top: -0.6666rem;
  margin-bottom: -0.6666rem;
  padding-top: 1rem;
  background-color: var(--px-alert-message-color--warning,orange);
}

.c3 {
  color: var(--px-alert-message-text-color,black);
  line-height: 1.06667rem;
  font-size: 0.8rem;
  padding: 0;
  margin: 0;
}

<div
  className="c0"
>
  <div
    className="c1"
    type="warning"
  />
  <div
    className="c2"
  >
    <div
      className="c3"
    >
      <strong>
        null
      </strong>
      <span />
      <div>
        This is a message
      </div>
    </div>
  </div>
  <div
    className="c4"
  />
</div>
`;
